# lab08

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake
.github/workflows/: docker-image.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world_application/: Makefile  cmake_install.cmake
_build/solver_application/: Makefile  cmake_install.cmake  solver_app
_build/solver_lib/: Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt  Makefile
formatter_lib/: CMakeLists.txt  Makefile
hello_world_application/: CMakeLists.txt  Makefile  hello_world
solver_application/: CMakeLists.txt  Makefile
solver_lib/: CMakeLists.txt  Makefile
